MODORDSTOR-103 Clean-up basic CRUD for acquisitions-unit-assignments
Optional refactoring: using `PgUtil.get` instead of custom `HelperUtils.getEntitiesCollection`